Fix T72632: Blender crashes using Jack with AV Sync enabled (repeatable)